[PS-81] Add user interface functionalities
